--- a/app/index.html
+++ b/app/index.html
@@ -156,7 +156,7 @@
                             <img src="img/services-img2.png" alt="">
                         </div>
                         <h4 class="services__item-title">
-                                BRANDING IDENTITY
+                            BRANDING IDENTITY
                         </h4>
                         <p class="services__item-text">
                             This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet
@@ -168,7 +168,7 @@
                             <img src="img/services-img3.png" alt="">
                         </div>
                         <h4 class="services__item-title">
-                                MOBILE APP
+                            MOBILE APP
                         </h4>
                         <p class="services__item-text">
                             This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet
@@ -180,7 +180,7 @@
                             <img src="img/services-img4.png" alt="">
                         </div>
                         <h4 class="services__item-title">
-                                SEARCH ENGINE OPTIMIZATION
+                            SEARCH ENGINE OPTIMIZATION
                         </h4>
                         <p class="services__item-text">
                             This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet
@@ -192,7 +192,7 @@
                             <img src="img/services-img5.png" alt="">
                         </div>
                         <h4 class="services__item-title">
-                                GAME DEVELOPMENT
+                            GAME DEVELOPMENT
                         </h4>
                         <p class="services__item-text">
                             This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet
@@ -204,12 +204,141 @@
                             <img src="img/services-img6.png" alt="">
                         </div>
                         <h4 class="services__item-title">
-                                MADE WITH LOVE
+                            MADE WITH LOVE
                         </h4>
                         <p class="services__item-text">
                             This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet
                             Aenean.
                         </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="team">
+            <div class="container">
+                <h2 class="team__title">
+                    MEET OUR AMAZING TEAM
+                </h2>
+                <p class="team__text">
+                    Lorem ipsum dolor sit amet proin gravida nibh vel velit
+                </p>
+                <div class="team__items">
+                    <div class="team__item">
+                        <img src="img/img-team.jpg" alt="">
+                        <p class="team__item-name">
+                            SEMF UCUK
+                        </p>
+                        <p class="team__item-work">
+                            CEO & FOUNDER
+                        </p>
+                    </div>
+                    <div class="team__item">
+                        <img src="img/img-team.jpg" alt="">
+                        <p class="team__item-name">
+                            DIK ADALIN
+                        </p>
+                        <p class="team__item-work">
+                            ENGINEERING
+                        </p>
+                    </div>
+                    <div class="team__item">
+                        <img src="img/img-team.jpg" alt="">
+                        <p class="team__item-name">
+                            JENG KOL
+                        </p>
+                        <p class="team__item-work">
+                            DESIGNER
+                        </p>
+                    </div>
+                    <div class="team__item">
+                        <img src="img/img-team.jpg" alt="">
+                        <p class="team__item-name">
+                            PET ROMAK
+                        </p>
+                        <p class="team__item-work">
+                            MARKETING
+                        </p>
+                    </div>
+                </div>
+                <p class="team__us">Become part of our dream team, let’s join us !</p>
+                <a href="" class="team__btn default__btn">WE ARE HIRING</a>
+            </div>
+        </section>
+        <section class="works">
+            <div class="container">
+                <div class="works__inner">
+                    <h3 class="works__title">
+                        OUR WORKS
+                    </h3>
+                    <a href="#" class="works__all">
+                        See All Project in dribbble
+                    </a>
+                </div>
+            </div>
+            <div class="img__works">
+                <img src="img/works-img.jpg" alt="">
+                <img src="img/works-img2.jpg" alt="">
+                <img src="img/works-img3.jpg" alt="">
+                <img src="img/works-img4.jpg" alt="">
+                <img src="img/works-img2.jpg" alt="">
+                <img src="img/works-img3.jpg" alt="">
+                <img src="img/works-img4.jpg" alt="">
+                <img src="img/works-img2.jpg" alt="">
+                <img src="img/works-img4.jpg" alt="">
+                <img src="img/works-img3.jpg" alt="">
+                <img src="img/works-img2.jpg" alt="">
+                <img src="img/works-img4.jpg" alt="">
+            </div>
+            <a href="#" class="works__btn default__btn">
+                LOAD MORE
+            </a>
+        </section>
+        <section class="quote-block">
+            <div class="container">
+                <blockquote class="quote-block__text">
+                    This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean
+                    sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.
+                    Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec
+                    tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit.
+                </blockquote>
+                <p class="quote-block__author">
+                    JANE GALADRIEL
+                </p>
+                <span class="quote-block__position">
+                    CEO TENGKUREP
+                </span>
+                <div class="quote-block__slider">
+                    <div class="quote__slider-wrap">
+                        <div class="img-quote__slider">
+                                <img src="img/slider-quote.png" alt="">
+                                <img src="img/slider-quote.png" alt="">
+                                <img src="img/slider-quote.png" alt="">
+                                <img src="img/slider-quote.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="news">
+            <div class="container">
+                <div class="news__inner">
+                    <div class="news__form">
+                        <h2 class="news__title">
+                            GIVE US A GOOD NEWS
+                        </h2>
+                        <form>
+                            <input type="name" placeholder="Name">
+                            <input type="email" placeholder="Email">
+                            <input type="text" placeholder="Subject">
+                            <textarea placeholder="Your Massage"></textarea>
+                        </form>
+                        <button href="#" class="news__btn default__btn">SUBMIT</button>
+                    </div>
+                    <div class="news__partner">
+                        <h2 class="news__title">
+                            OUR HAPPY CLIENT
+                        </h2>
+                        <img src="img/partner.png" alt="">
                     </div>
                 </div>
             </div>
